objects/ASI_MFM_PO_Receipt_Item__c.object
<CustomObject>
    <description>MFM PO receipt item</description>
    <fields>
        <fullName>ASI_MFM_ACC_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JDE Accruals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_A_C_Code__r.ASI_MFM_A_C_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/C Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code_temp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AccountsAdditionalField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For KR MFM</description>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>KR PO Receipt Line</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR PO Receipt Line</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR), Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount__c</fullName>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Auto_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Capex_check__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Capex check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_POLineAmount__c</fullName>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Receipt_Amount_Prepayment__c</fullName>
        <label>Receipt Amount (Prepayment)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Consumer_Prize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer Prize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency_Temp__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Date__c</fullName>
        <label>ETL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_E_Market_Receipt_ID__c</fullName>
        <label>E-Market Receipt ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>ASI_MFM_Event__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FOC_Request_Number__c</fullName>
        <label>FOC Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Document_Number__c</fullName>
        <label>JDE Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Document_Type__c</fullName>
        <label>JDE Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_subLedger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>Subledger_POR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_List_Item_Description_Temp__c</fullName>
        <label>List Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_List_Item_Description__c</fullName>
        <formula>if(ASI_MFM_PO_Line_Item__c == null,ASI_MFM_List_Item_Description_Temp__c,ASI_MFM_PO_Line_Item__r.ASI_MFM_List_Item_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Marketing_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing PO Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Opening_Balance__c</fullName>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Item_Receipt_Amount__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_CN_Receipt_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Line Item Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Item__c</fullName>
        <label>PO Item</label>
        <referenceTo>ASI_MFM_PO_Line_Item__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Raised_Date__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_PO_Raised_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Balance_Amount__c</fullName>
        <description>ETL</description>
        <formula>ASI_MFM_Amount__c - ASI_MFM_Paid_Amount__c</formula>
        <label>PO Receipt Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt__c</fullName>
        <label>PO Receipt</label>
        <referenceTo>ASI_MFM_PO_Receipt__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Remark__c</fullName>
        <label>PO Remark</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PR_Category__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_PR_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PR_Requester__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_PR_Requester__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ETL</description>
        <inlineHelpText>In PRJP MFM, only those payment lines with &quot;ETL flag = TRUE&quot; will be identified as &quot;Paid&quot;.</inlineHelpText>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Pay_Acc__c</fullName>
        <formula>TEXT(ASI_MFM_PO_Line_Item__r.ASI_MFM_Pay_Acc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay/Acc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Line Item</label>
        <referenceTo>ASI_MFM_Plan_Line_Item__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_No__c</fullName>
        <formula>ASI_MFM_Plan_Line_Item__r.ASI_MFM_Plan_id_sys__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Post_G_L_Date__c</fullName>
        <label>Post G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_Amount_YTD__c</fullName>
        <label>Receipt Amount YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_Amount_in_Local_Currency__c</fullName>
        <formula>ASI_MFM_Amount__c * ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.ASI_MFM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt Amount in Local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_Line_Description__c</fullName>
        <label>Receipt Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remaining_Balance__c</fullName>
        <description>In JP Manage all Page</description>
        <formula>ASI_MFM_Amount__c - ASI_MFM_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remaining_Receipt_Balance_Temp__c</fullName>
        <label>Remaining Receipt Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remaining_Receipt_Balance__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_CN_Remaining_Receipt_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Receipt Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Brand_Code__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_Sub_brand_Code__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_temp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>PO Receipt Items</relationshipLabel>
        <relationshipName>PO_Receipt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Suggested_Receipt_YTD_Temp__c</fullName>
        <label>Suggested Receipt YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Suggested_Receipt_YTD__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_Receipt_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Receipt YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Amount__c</fullName>
        <formula>ASI_MFM_Amount__c *( ASI_MFM_PO__r.ASI_MFM_VAT__c/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_UOM__c</fullName>
        <label>UOM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Venue_Where__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue(Where)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>KR PO Receipt Line</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR PO Receipt Line</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR), Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>PO Receipt Items (Venue(Where))</relationshipLabel>
        <relationshipName>PO_Receipt_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Line_Item_Receipt_Amount_Temp__c</fullName>
        <label>PO Line Item Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PO Receipt Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Receipt Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_PO_Receipt_item</fullName>
        <active>true</active>
        <description>MFM PO Receipt Line Item</description>
        <label>CN PO Receipt Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_GF_PO_Receipt_item</fullName>
        <active>true</active>
        <label>GF PO Receipt Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_HK_PO_Receipt_Item</fullName>
        <active>true</active>
        <label>HK PO Receipt Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_JP_PO_Receipt_item</fullName>
        <active>true</active>
        <label>JP PO Receipt Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_PO_Receipt_item</fullName>
        <active>true</active>
        <label>KR PO Receipt Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TR_PO_Receipt_item</fullName>
        <active>true</active>
        <label>TR PO Receipt Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_CN_Receipt_AMT_Check_againt_PO</fullName>
        <active>false</active>
        <errorConditionFormula>( ASI_MFM_Amount__c &gt;  ASI_MFM_PO_Line_Item__r.ASI_MFM_Amount__c  )</errorConditionFormula>
        <errorDisplayField>ASI_MFM_A_C_Code_temp__c</errorDisplayField>
        <errorMessage>Receipt amount cannot be greater than PO item amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CN_descRequiredCheck</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName=&apos;ASI_MFM_CN_PO_Receipt_item&apos;
&amp;&amp; ASI_MFM_CN_Capex_check__c 
&amp;&amp; CONTAINS(
LOWER(ASI_MFM_PO_Line_Item__r.ASI_MFM_Sub_brand_Code__r.Name), &apos;capex&apos;) 
&amp;&amp; ( ASI_MFM_Receipt_Line_Description__c=NULL || ASI_MFM_Receipt_Line_Description__c=&apos;&apos;)</errorConditionFormula>
        <errorMessage>Receipt Line Description is required</errorMessage>
    </validationRules>
</CustomObject>